--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,10 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: right 0.4s ease-in-out, top 0.4s ease-in-out;
+  transition: right 0.4s ease-in-out, top 0.4s ease-in-out, visibility 0.4s;
+}
+nav:not(.open) {
+  visibility: hidden;
 }
 nav.open {
   right: 0;
